# infsci2440-s26-term-project

./: .env.example  .gitignore  LICENSE  README.md  TODOS.md  app.py  pyproject.toml
.streamlit/: config.toml
docs/: 00-PROJECT-OVERVIEW.md  01-DATA-PREP-TESTING.md  01-DATA-PREP.md  01-SHARED-INTERFACES.md  02-PERSON1-SEARCH-EXPANSION-MANUAL-TESTING.md  02-PERSON1-SEARCH-EXPANSION.md  03-PERSON2-CLASSIFICATION-MANUAL-TESTING.md  03-PERSON2-CLASSIFICATION-UI.md  03-PERSON3-IMPLEMENTATION-GAPS.md  04-PERSON3-PROBABILISTIC-LLM.md  05-ERROR-HANDLING.md  06-TEST-SPECIFICATION.md  07-DEPLOYMENT-GUIDE.md
scripts/: __init__.py  analyze_test_queries.py  create_sample.py  download_data.py  explore_dataset.py  extract_test_examples.py  label_training_data.py  merge_review_batches.py  prepare_all_data.py  preprocess_data.py  review_batch.py  tokenize_sentences.py  train_classifier.py  train_models.py  validate_data.py
src/: __init__.py  config.py  mocks.py  pipeline.py
src/classification/: __init__.py  naive_bayes.py
src/judge/: __init__.py  heuristics.py  llm_judge.py  models.py  report.py  server.py
src/judge/templates/: index.html  report.html
src/llm/: __init__.py  provider.py
src/loaders/: loader.py  structures.py
src/reasoning/: __init__.py  bayesian_network.py  hmm_sentiment.py  llm_summarizer.py
src/search/: __init__.py  beam_search.py  query_preprocessor.py  term_filter.py  tfidf_retriever.py
src/utils/: errors.py  logger.py
tests/: conftest.py  test_bayesian.py  test_beam_search.py  test_classification.py  test_config.py  test_hmm.py  test_llm.py  test_llm_provider.py  test_llm_provider_integration.py  test_loader.py  test_mocks.py  test_naive_bayes.py  test_pipeline.py  test_query_preprocessor.py  test_script_idempotency.py  test_search_integration.py  test_structures.py  test_term_filter.py  test_tfidf.py
tests/judge/: conftest.py  test_result_relevance.py  test_score_ordering.py  test_term_relevance.py
