[project]
name = "survey-analysis-agent"
version = "0.1.0"
description = "An Intelligent Agent for Probabilistic and Context-Aware Analysis of Free-Text Survey Responses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "hmmlearn>=0.3.3",
    "nltk>=3.9.3",
    "pandas>=2.0.0,<3.0.0",
    "pgmpy>=1.0.0",
    "pydantic-ai>=1.69.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "streamlit>=1.55.0",
]
